objects/SME_User_Data__c.object
<CustomObject>
    <fields>
        <fullName>Claim_System_Text__c</fullName>
        <formula>IF ( INCLUDES ( Claim_System__c, &quot;NASCO&quot; ), &quot;NASCO; &quot;,NULL) &amp; 
IF ( INCLUDES ( Claim_System__c, &quot;WGS 2.0&quot; ), &quot;WGS 2.0&quot;,NULL)</formula>
        <label>Claim System Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <label>Claim System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>WGS 2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Text1__c</fullName>
        <formula>IF ( INCLUDES ( Department__c, &quot;Act Wise CDH&quot; ), &quot;Act Wise CDH; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Act Wise FSA&quot; ), &quot;Act Wise FSA; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;AIMEast&quot; ), &quot;AIMEast; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Anthem Flex Hour&quot; ), &quot;Anthem Flex Hour; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Anthem Health Guide&quot; ), &quot;Anthem Health Guide; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Anthem Health Rewards&quot; ), &quot;Anthem Health Rewards; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Behavioral Health&quot; ), &quot;Behavioral Health; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Benefit Booklets/Contracts&quot; ), &quot;Benefit Booklets/Contracts; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Blue Exchange (BX)&quot; ), &quot;Blue Exchange (BX); &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Bold&quot; ), &quot;Bold; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Broker Compensation&quot; ), &quot;Broker Compensation; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;CCMU&quot; ), &quot;CCMU; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Claims&quot; ), &quot;Claims; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Claims Retro&quot;), &quot;Claims Retro; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Client Reporting&quot; ), &quot;Client Reporting; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Coordinated Care Model&quot; ), &quot;Coordinated Care Model; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Data Interface Team (DIT)&quot; ), &quot;Data Interface Team (DIT); &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;DeCare&quot; ), &quot;DeCare; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Dental&quot; ), &quot;Dental; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;EAP&quot; ), &quot;EAP; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;eBusiness&quot; ), &quot;eBusiness; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Enrollment and Billing (E/B)&quot; ), &quot;Enrollment and Billing (E/B); &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Group Services&quot; ), &quot;Group Services; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Health and Wellness Solutions&quot; ), &quot;Health and Wellness Solutions; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;HealthEquity/WageWorks/FSA/COBRA&quot; ), &quot;HealthEquity/WageWorks/FSA/COBRA; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;ID Cards&quot; ), &quot;ID Cards; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;IHM&quot; ), &quot;IHM; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Implementations&quot; ), &quot;Implementations; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Interplan&quot; ), &quot;Interplan; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;IT&quot; ), &quot;IT; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;JAA/NTS&quot; ), &quot;JAA/NTS; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Life and Disability&quot; ), &quot;Life and Disability; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;LITES CDH&quot; ), &quot;LITES CDH; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Live Health Online&quot; ), &quot;Live Health Online; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Medical Benefits&quot; ), &quot;Medical Benefits; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Medical Benefits - NASCO Retro&quot; ), &quot;Medical Benefits - NASCO Retro; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Mercer Health Advantage&quot; ), &quot;Mercer Health Advantage; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;NCN&quot; ), &quot;NCN; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Network Management&quot; ), &quot;Network Management; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Onsite Clinic&quot; ), &quot;Onsite Clinic; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Pharmacy&quot; ), &quot;Pharmacy; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Pricing Configuration Management (PCM)&quot; ), &quot;Pricing Configuration Management (PCM); &quot;,NULL)</formula>
        <label>Department Text1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Text2__c</fullName>
        <formula>IF ( INCLUDES ( Department__c, &quot;SBC&quot; ), &quot;SBC; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Service Operations&quot; ), &quot;Service Operations; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Service Operations Retro&quot; ), &quot;Service Operations Retro; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Spider&quot; ), &quot;Spider; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Subrogation&quot; ), &quot;Subrogation; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;TeleHealth&quot; ), &quot;TeleHealth; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Telephony&quot; ), &quot;Telephony; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Testing Team&quot; ), &quot;Testing Team; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;UM Intake&quot; ), &quot;UM Intake; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Underwriting&quot; ), &quot;Underwriting; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Virtual Second Opinion&quot; ), &quot;Virtual Second Opinion; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Vision&quot; ), &quot;Vision; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;WINFertility&quot; ), &quot;WINFertility; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Specialty Sales&quot; ), &quot;Specialty Sales; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Performance Guarantees&quot; ), &quot;Performance Guarantees; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Pre-Imp Audit&quot; ), &quot;Pre-Imp Audit; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Production Support&quot; ), &quot;Production Support; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;PSCCR&quot; ), &quot;PSCCR; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Marketing&quot; ), &quot;Marketing; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Grievance &amp; Appeals&quot; ), &quot;Grievance &amp; Appeals; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Fraud Investigations&quot; ), &quot;Fraud Investigations; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;COB&quot; ), &quot;COB; &quot;,NULL) &amp;
IF ( INCLUDES ( Department__c, &quot;Billing/Finance - ASO&quot; ), &quot;Billing/Finance - ASO; &quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Text2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Act Wise CDH</fullName>
                </value>
                <value>
                    <fullName>Actwise FSA</fullName>
                    <isActive>false</isActive>
                    <label>Actwise FSA</label>
                </value>
                <value>
                    <fullName>Act Wise FSA</fullName>
                </value>
                <value>
                    <fullName>Actwise HRA</fullName>
                    <isActive>false</isActive>
                    <label>Actwise HRA</label>
                </value>
                <value>
                    <fullName>Actwise HSA</fullName>
                    <isActive>false</isActive>
                    <label>Actwise HSA</label>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Anthem Flex Hour</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Rewards</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Benefit Booklets/Contracts</fullName>
                </value>
                <value>
                    <fullName>Billing/Finance - ASO</fullName>
                </value>
                <value>
                    <fullName>Blue Exchange</fullName>
                    <isActive>false</isActive>
                    <label>Blue Exchange</label>
                </value>
                <value>
                    <fullName>Blue Exchange (BX)</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Broker Compensation</fullName>
                </value>
                <value>
                    <fullName>CCMU</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Claims Retro</fullName>
                </value>
                <value>
                    <fullName>Client Reporting</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                    <isActive>false</isActive>
                    <label>COB</label>
                </value>
                <value>
                    <fullName>Coordinated Care Model</fullName>
                </value>
                <value>
                    <fullName>Coordinated Care Model (formerly Medical Management)</fullName>
                    <isActive>false</isActive>
                    <label>Coordinated Care Model (formerly Medical Management)</label>
                </value>
                <value>
                    <fullName>Coordination of Benefits</fullName>
                </value>
                <value>
                    <fullName>Data Interface Team</fullName>
                    <isActive>false</isActive>
                    <label>Data Interface Team</label>
                </value>
                <value>
                    <fullName>Data Interface Team (DIT)</fullName>
                </value>
                <value>
                    <fullName>DeCare</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>eBusiness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Text__c</fullName>
        <formula>IF ( INCLUDES ( Region__c, &quot;Central&quot; ), &quot;Central; &quot;,NULL) &amp; 
IF ( INCLUDES ( Region__c, &quot;North East&quot; ), &quot;North East; &quot;,NULL) &amp; 
IF ( INCLUDES ( Region__c, &quot;South East&quot; ), &quot;South East; &quot;,NULL) &amp; 
IF ( INCLUDES ( Region__c, &quot;West&quot; ), &quot;West&quot;,NULL)</formula>
        <label>Region Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US_21833</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SME_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SME_Imp_Case_Rec_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME Imp Case Rec ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>SME User Data</relationshipLabel>
        <relationshipName>SME_User_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Imp_Case__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Imp Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SME_User_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SME User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SME User Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Claim_System__c</columns>
        <columns>Department__c</columns>
        <columns>Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMEUSER-{000}</displayFormat>
        <label>SME Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SME User Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>